select drop-down

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <h1>Take a quiz</h1>
     <h3>Because quizzes are fun</h3>
-    <img id="welcome-image" alt="" src="https://media.giphy.com/media/UDjF1zMreMld6/giphy.gif" />
+    <!-- <img id="welcome-image" alt="" src="https://media.giphy.com/media/UDjF1zMreMld6/giphy.gif" /> -->
     <br />
 
-
-    <div class="quiz">
+    <h3>Select Quiz Type</h3>
+    
+    <div class="quiz_create">
         
     </div>
 
