tuesday mid-afternoon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 
     <div>
-        <form id="quiz-selections">
+        <form action="views/quiz.html" method="get" id="quiz-selections">
         <label for="difficulty">Choose difficulty level:</label>
         <select id="difficulty-select" name="difficulty">
             <option value="easy">Easy</option>
@@ -29,7 +29,5 @@
     
 </body>
 <script defer type="text/javascript" src="src/index.js" charset="utf-8"></script>
-<!-- <script defer type="text/javascript" src="callback.js" charset="utf-8"></script> -->
-
-
+<!-- <script defer type="text/javascript" src="src/quiz.js" charset="utf-8"></script> -->
 </html>
