--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <title>Quiz Generator</title>
+    <script defer type="text/javascript" src="src/common.js" charset="utf-8"></script>
+    <script defer type="text/javascript" src="src/index.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -23,6 +25,6 @@
         </div>
     </div>
 </body>
-<script defer type="text/javascript" src="src/index.js" charset="utf-8"></script>
+
 <!-- <script defer type="text/javascript" src="src/quiz.js" charset="utf-8"></script> -->
 </html>
