--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
             <select id="quiz-type-select" name="quiz-type"><br>
                 <option value="regular">Regular</option>
                 <option value="timed">Timed</option>
-            </select><br><br><br> <br><br> <br>
+            </select><br><br><br> 
+                <label for="nickname">What's your nickname? We'll use it for the leaderboard.</label>
+                <input type="text" id="nickname" name="nickname"><br><br>
             <input id="start-quiz" type="submit" value="Get quizzing!">
             </form>
-        </div>
+        </div><br><br>
+        <div id="leaderboard"></div>
     </div>
 </body>
 <script defer type="text/javascript" src="src/common.js" charset="utf-8"></script>
 <script defer type="text/javascript" src="src/index.js" charset="utf-8"></script>
-<!-- <script defer type="text/javascript" src="src/quiz.js" charset="utf-8"></script> -->
 </html>
