Progress bar + some css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <input id="start-quiz" type="submit" value="Get quizzing!">
             </form>
         </div><br><br>
-        <div id="leaderboard"></div>
+        <div id="leaderboard">
+            <h2>Leaderboard</h2>
+        </div>
     </div>
 </body>
 <script defer type="text/javascript" src="src/common.js" charset="utf-8"></script>
