--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <option value="timed">Timed</option>
             </select><br><br>
                 <label for="nickname">What's your nickname? We'll use it for the leaderboard.</label>
-                <input type="text" id="nickname" name="nickname"><br><br>
+                <input type="text" id="nickname" name="nickname"><br><br><br><br>
             <input id="start-quiz" type="submit" value="Get quizzing!">
             </form>
         </div><br><br>
